2005-11-23  Per Bothner  <per@bothner.com>

	* Invoke.java (applyN): Don't need to check for staticLink here.
	Instead, assume extra parameter for ClassType.
	(inline): Can more inline constructors regardless of whether
	there is or will be a static link.

2005-11-22  Per Bothner  <per@bothner.com>

	* SlotGet.java (getField): Adjust for updated ClassType.getField,
	to request all fields, not just public|protected ones.
	* SlotSet.java (getField): Likewise.

2005-11-16  Per Bothner  <per@bothner.com>

	* SlotGet.java (apply2): Use WrappedException.

	* ClassMethods.java (getMethods): Pass caller's package, if known,
	as context to ClassType.getMethods.

2005-10-16  Per Bothner  <per@bothner.com>

	* ClassMethods.java (getMethods): Kludge to search Type.string_type
	rather than type.tostring_type for methods.

2005-09-25  Per Bothner  <per@bothner.com>

	* Invoke.java (typeFrom): New private helper method.
	(apply(CallContext), apply(Object[],CallContext)): New methods.
	(applyN): Use typeFrom.
	* ClassMethodProc.java (kind): New field.
	(fixup): New method to initialize 'kind' field.
	(make, readExternal): Use fixup.
	(apply(CallContext)): New method - optimimization.
	(applyN, rewrite): Slight optimization by using kind field.
	(rewrite): Generalize func to handle QuoteExp and ReferenceExp.
	(toString): New method.

2005-08-08  Per Bothner  <per@bothner.com>

	* ClassMethodProc.java (castDecl): New static field.
	(CAST_METHOD_NAME, INSTANCEOF_METHOD_NAME): New constants.
	(applyN, rewrite): Support class cast operation.

2005-08-07  Per Bothner  <per@bothner.com>

	* SlotGet.java (apply2, compile): Implement "class" pseudo-field.

2005-08-04  Per Bothner  <per@bothner.com>

	* Invoke.java (getClassType, inline): Inline in 2-argument inline
	(inline): Overload to take a Compilation.
	* Invoke.java (inline): Allow inlining of constructor even if it
	doesn't yet exist as long as the class is static.

2005-08-03  Per Bothner  <per@bothner.com>
